@@ -1,0 +1,7 @@
+#include <time.h>
+
+int main(void)
+{
+  struct timespec ts;
+  return clock_gettime(CLOCK_REALTIME, &ts) != 0;
+}
