@@ -7,7 +7,8 @@ Changes in version 1.025
 - Renamed the "setmode" function in bg-installer that was causing
   compile problems on *BSD systems.
 
-- Added a sysdep for struct timespec, which is defined if not present.
+- Added a sysdep for struct timespec and clock_gettime, which are
+  defined if not present.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
